fix: project desc not showing

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,8 @@ nav {
 /* about section */
 #about h1,
 #projects h1,
-#about-page h1 {
+#about-page h1,
+#projects-page h1 {
   text-align: center;
   font-size: 3rem;
   background-color: var(--overlay-color);
@@ -206,7 +207,7 @@ nav {
 }
 
 /* paintings gallery */
-.about-page-hobbies{
+.about-page-hobbies {
   text-align: center;
   font-size: 2rem;
   margin: 1rem 0;
@@ -220,23 +221,72 @@ nav {
 }
 .painting img {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
     rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
     rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
 /* projects page */
-.projects{
+.projects {
   display: grid;
-  margin: 0 2rem;
+  margin: 2rem;
+  text-align: center;
+  color: var(--secondary-color);
+  font-weight: 900;
 }
 
-.project img {
-  width: 80%;
-  height: 80%;
-  opacity: 0.5;
+.project {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  width: 90vw;
+  height: 50vh;
+  /* position: absolute; */
+}
+.project-background {
+  width: 100%;
+  height: 90%;
+  position: relative;
+}
+#projects-page > div > div > div.project-background {
+  background: url(../assets/projects/weatherReact.jpg) no-repeat center
+    center/cover;
+}
+.project-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.project-links a {
+  color: black;
+}
+.project-links > * {
+  margin: 1rem;
+}
+
+.project-desc{
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
+/* project pseudo element for clicking effect */
+.project-desc::after {
+  content: "";
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.project-desc:focus::after {
+  content: "A weather application built with React, using weather API.";
+  font-size: 2rem;
+  text-align: center;
+  background-color: #fff;
+  opacity: 0.8;
 }
 
 @media (min-width: 500px) {
